--- a/documents/small-mammals.Rmd
+++ b/documents/small-mammals.Rmd
@@ -131,7 +131,7 @@ filter(surveys, !is.na(weight))
 ```
 
 
-Exercise:
+Exercise 1:
 
 ```{r}
 
@@ -155,5 +155,386 @@ surveys_subset <- select(surveys_subset, year, species_id, weight_kg)
 select(surveys, month, year, day)
 
 surveys$weight == NA
+NA == NA
+# the following does not work:
+#filter(surveys, match(surveys$weight, NA))
 ```
 
+## Pipes
+
+`%>%` - `magrittr` package required
+`|>` - inbuilt in R, but very new, so you need an updated version of RStudio
+
+```{r}
+mean(x = c(1,3,65, 38, 100)) ##  sequential code
+c(1, 3, 65, 38, 100) %>% mean()
+
+sqrt(mean(x = c(1,3,65,38, 100)))
+?sqrt
+sqrt(41.4)
+c(1,3,65,38, 100) |> mean () |> sqrt()
+
+is.na(3)
+!is.na(NA)
+is.na(surveys$weight)
+
+mean1 <- mean(x = c(1, 3, 7, 38, 100))
+mean1
+
+c(1, 3, 7, 38, 100) |> mean() -> mean2
+mean2
+
+mean3 <- c(1, 3, 7, 38, 100) |> mean()
+mean3
+
+mean(surveys$weight, na.rm = TRUE)
+surveys$weight |> mean(na.rm = TRUE)
+```
+
+Exercise 2
+Use data pipes to run the code from Exercise 1
+```{r}
+surveys1 <- surveys |> 
+  mutate(weight_kg = weight/1000) |>
+  select(year, species_id, weight_kg) |>
+  filter(!is.na(weight_kg))
+colnames(surveys1)
+is.na(surveys1$weight_kg) |> any()
+
+```
+
+```{r}
+surveys2 <- surveys |> 
+  select(year, month, day, species_id, weight) |>
+  filter(species_id == "SH") |>
+  filter(!is.na(weight)) |>
+  select(year, month, day, species_id)
+
+colnames(surveys2)
+nrow(surveys2)
+
+surveys2$species_id == "SH"
+surveys[surveys2$species_id == "SH",]
+colnames(surveys2)
+```
+
+```{r}
+ds_data <- filter(surveys, species_id == "DS", !is.na(weight))
+nrow(ds_data)
+ds_data_by_year <- arrange(ds_data, year)
+ds_weight_by_year <- select(ds_data_by_year, year, weight, species_id)
+nrow(ds_weight_by_year)
+ds_weight_by_year
+```
+
+```{r, eval = FALSE}
+ds_weight_by_year <- surveys |> 
+  filter(species_id == "DS") |>
+  filter(!is.na(weight)) |>
+  arrange(year) |>
+  select(year, weight, species_id)
+
+ds_weight_by_year
+xx <- lm(weight ~ year, data = surveys_DS)
+summary(xx)
+summary(lm(weight ~ year, data = surveys))
+```
+
+## Data aggregation
+
+```{r}
+surveys_by_year <- group_by(surveys, plot_id, year)   
+
+surveys_by_year
+
+plot_year_counts <- summarize(surveys_by_year, abundance = n())
+```
+
+The same but using a pipe:
+
+```{r}
+surveys_by_year <- surveys |>
+  group_by(plot_id, year) |>
+  summarize(abundance = n())
+
+surveys_by_year
+```
+```{r}
+surveys |> 
+  filter(!is.na(weight)) |>
+  filter(species_id == "DO") |>
+  group_by(year) |>
+  summarize(mean_by_year = mean(weight)) 
+colnames(surveys)
+```
+
+```{r}
+getwd()
+read.csv(file = "../data-raw/shrub-volume-data.csv") -> shrubs
+head(shrubs)
+
+select(shrubs, length) -> shrubs_length
+```
+
+```{r}
+filter(shrubs, height > 5)
+
+1 == 1
+1 > 1
+1 >= 1
+"a" == "a"
+"a" == "A"
+"a" != "A"
+```
+
+
+
+
+
+Logical statements, AND indicated by the & symbol, OR indicated the vertical bar "|" symbol 
+```{r}
+filter(shrubs, height > 5 | experiment == 2)
+filter(shrubs, height < 5)
+filter(shrubs, experiment ==1 | experiment == 3)
+filter(shrubs, experiment >= 2)
+```
+
+Relational statements with missing values
+
+```{r}
+NA == 3
+shrubs$height == NA
+is.na(NA)
+```
+
+Function that summarize values ina vector like mean, max, min, sum
+```{r}
+mean(shrubs$height)
+max(shrubs$height)
+min(shrubs$height)
+sum(shrubs$height, na.rm = TRUE)
+sum(surveys$weight, na.rm = TRUE)
+```
+
+## Joining data tables
+
+First, load the data, then look at it:
+
+```{r}
+species <- read.csv(file = "../data-raw/species.csv")
+plots
+```
+
+```{r}
+inner_join(surveys, species, by = "species_id")
+left_join(surveys, species, by = "species_id")
+right_join(surveys, species, by = "species_id")
+full_join(surveys, species, by = "species_id")
+```
+
+
+How do we find out if we have matching columns in two tables
+
+```{r}
+surveys_colnames <- colnames(surveys)
+species_colnames <- colnames(species)
+surveys_colnames[7]
+to_keep <- c(1, 4, 3, 2)
+to_keep <- c(FALSE, TRUE, TRUE, FALSE)
+species_colnames[to_keep]
+```
+
+The %in% operator
+
+```{r}
+1 %in% c(1, 2, 3)
+c(1,2,3) %in% 1
+
+matching_colnames <- colnames(species) %in% colnames(surveys)
+matching_colnames
+colnames(species)[matching_colnames]
+```
+
+How to join more than 2 tables?
+
+```{r}
+combined <- inner_join(surveys, species, by = "species_id") 
+combined_full <- inner_join(combined, plots, by = "plot_id")
+head(combined)
+head(combined_full)
+```
+Run the code above using a pipe:
+```{r}
+combined_full <- surveys %>%
+  inner_join(species, by = "species_id") %>%
+  inner_join(plots, by = "plot_id")
+head(combined_full)
+```
+Joint-exercise:
+
+```{r}
+surveys %>% 
+  inner_join(plots, by = "plot_id") %>% 
+  filter(plot_type == "Control") # gets 15,660 rows
+
+filter(plots, plot_type == "Control") %>%
+  inner_join(surveys, ., by = "plot_id") # gets 15,660 rows
+  
+```
+Exercise 2:
+
+```{r}
+colnames(surveys)
+combined_full <- inner_join(surveys, species, by = "species_id") %>% 
+  inner_join(plots, by = "plot_id") 
+colnames(combined_full)
+combined_full %>% 
+  filter(plot_type == "Control" | plot_type == "Long-term Krat Exclosure") %>% 
+  filter(taxa == "Rodent") %>% 
+    select(year, genus, species, weight, plot_type) %>% # 20,497 rows
+  filter(!is.na(weight)) # 19,344 rows rows
+
+  
+#colnames(test_object)
+#tail(test_object, 100)
+#"Long-term Krat Exclosure" %in% test_object$plot_type
+```
+
+
+Exercise 3
+
+```{r}
+combined_full %>% 
+  filter(species_id == "DO") %>% 
+  select(year, month, day, species_id, weight) -> data1
+
+combined_full %>% 
+  filter(species_id == "PP" | species_id == "PB") %>% 
+  filter(year > 1994) %>% 
+  filter(!is.na(hindfoot_length)) %>% 
+  select(year, species_id, hindfoot_length) -> data2
+
+combined_full %>% 
+  filter(!is.na(hindfoot_length)) %>% 
+  group_by(species_id, year) %>% 
+  summarize(mean_hindfoot_length = mean(hindfoot_length, na.rm = TRUE))
+
+#m mean(c(NA, 3, 4,5), na.rm = TRUE)
+
+surveys %>% 
+  filter(!is.na(hindfoot_length)) %>% 
+  group_by(species_id, year) %>% 
+  summarize(avg = mean(hindfoot_length, na.rm = TRUE)) -> data3
+
+combined_full %>% 
+  filter(genus == "Dipodomys") %>% 
+  select(year, genus, species, weight, plot_type)
+```
+```{r}
+abc <- letters[c(1,2,3)]
+abc[c(TRUE, FALSE)]
+abc[FALSE]
+seq(1, 100, 2)
+??seq
+c(1,2,3) %in% c(4,5,1) %>% 
+  c(1,2,3)[.]
+```
+
+How to use the function `filter()`
+Some examples of relational statements: they evaluate  relationships between two variables or objects
+The symbols that we use are
+```
+== "equals to"
+> "larger than"
+< "smaller than"
+!= "not equal to"
+>= "larger or equal to"
+<= "smaller or equal to"
+```
+```{r}
+1 == 1
+1 > 1
+1 >= 1
+1 != 1
+1 < 2
+1 <= 2
+"luna" == "luna"
+"luna" == "Luna"
+"luna" < "Luna"
+```
+
+Logical statements test if two or more relational statements are true or false in combination.
+To evaluate a logical comparison we have two symbols, that represent two types of logical comparisons:
+- the ampersand &: this evaluates that the relation to the left AND the relation to the right are both TRUE
+- the vertical bar |: evaluates that the relation to the left OR the relation to the right are TRUE; in other words, at least one of the relations must be TRUE
+
+```{r}
+1 == 1 & 1 < 2
+1 == 1 | 1 < 2
+1 == 1 | "luna" == "mars"
+1 == 1 & "luna" == "mars"
+```
+
+```{r, eval = FALSE}
+colnames(combined_full)
+filter(combined_full, plot_type == "Control" & species_id == "PP" & plot_id == 2 | species_id == "DO") %>%  
+  filter(data = ., !is.na(weight)) %>% 
+  nrow(.)
+```
+
+Something important for relational statements is the NA
+```{r}
+NA == "luna"
+
+is.na(NA)
+is.na("luna")
+is.na(3)
+
+mean(surveys$weight, na.rm = TRUE)
+min(surveys$weight, na.rm = TRUE)
+max(surveys$weight, na.rm = TRUE)
+```
+
+
+```{r}
+surveys$weight %>% 
+  mean(na.rm = TRUE)
+```
+
+```{r}
+surveys %>% 
+  filter(!is.na(weight)) %>% 
+  lm(weight ~ year, data = .)
+
+surveys %>% 
+  mutate(species_id = tolower(species_id))
+
+intersect(colnames(surveys), colnames(plots))
+intersect(colnames(species), colnames(surveys))
+length <- c(2.2, 2.1, 2.7, 3.0, 3.1, 2.5, 1.9, 1.1, 3.5, 2.9)
+width <- c(1.3, 2.2, 1.5, 4.5, 3.1, NA, 1.8, 0.5, 2.0, 2.7)
+height <- c(9.6, 7.6, 2.2, 1.5, 4.0, 3.0, 4.5, 2.3, 7.5, 3.2)
+length * width
+```
+
+
+```{r}
+mutate(surveys, sex = tolower(sex))
+```
+
+
+```{r, child = 'vectors_and_data_frames.Rmd'}
+
+````
+
+```{r}
+
+````
+
+```{r}
+
+````
+
+```{r}
+
+````
