--- a/documents/portal-phylogenies.Rmd
+++ b/documents/portal-phylogenies.Rmd
@@ -205,12 +205,37 @@ library(dplyr)
 inner_join(species, surveys, by = "species_id")
 ```
 ```{r}
+library(ape)
+portal_tree <- read.tree(file = "../data-raw/portal-tree.tre")
 portal_tree
+class(portal_tree)
+typeof(portal_tree)
+str(portal_tree)
+portal_tree
+str(surveys)
+
 ```
 ```{r}
+portal_tree <- read.tree(file = "../data-raw/portal-tree.tre")
+portal_tree <- read.tree(file = "https://raw.githubusercontent.com/LunaSare/data-science-research-biology/main/data/portal-tree.tre")
+portal_tree
+# write phylo object to a newick file
+write.tree(phy = portal_tree, file = "../data-raw/portal-tree-url.tre")
+
+nrow(taxonomy)
+taxonomy <- read.csv(file = "../data-raw/portal-species-taxonomy.csv")
+taxonomy <- read.csv(file = "https://raw.githubusercontent.com/LunaSare/data-science-research-biology/main/data/portal-species-taxonomy.csv")
+head(taxonomy)
+write.csv(taxonomy, file = "../data-raw/taxonomy-test.csv", row.names = FALSE)
+```
+
+### Join the taxnomy data with the portal tree
+
+```{r}
+library(tidytree)
 left_join(portal_tree, taxonomy, by = "label")
 ## the join failed!!
-# we need to check our species labels on teh tree and on the data table:
+# we need to check our species labels on the tree and on the data table:
 head(taxonomy)
 taxonomy$label
 ```
@@ -230,8 +255,144 @@ class(tree_data)
 ```
 Color by a variable in our column:
 ```{r}
+library(ggtree)
 ggtree(tr = tree_data, mapping = aes(color = taxa)) +
   geom_tiplab(size = 2.5, fontface = "italic") +
   xlim(0,100)
 ggsave(filename = "../fig/portal-tree-1.png")
 ```
+
+### Troubleshooting tree and data joins:
+
+```{r}
+portal_tree$tip.label
+taxonomy$label
+match(taxonomy$label, portal_tree$tip.label)
+match(portal_tree$tip.label, taxonomy$label)
+```
+
+### Exercise - homework
+
+Exercise: A taxonomy table for small_tree
+1. Plot small tree with tip labels in italics and using the appropriate xlim
+2. Find the appropriate scientific group labels for each genus in small_tree using this tree as guide.
+Create a data frame with 3 columns:
+a "label" column with the names of the tip labels of small_tree. Tip: extract the element "tip.label" from your phylo object to get a vector of tip labels that you can then join to the other vectors to create a data frame.
+a "taxa" column with the scientific names of the group that each genus belongs to.
+a "common_name" column with the common names of the group that each genus belongs to. Tip: use the function c() to create the vectors that will be columns "taxa" and "common_name"
+Join your tree and your table using left_join().
+Create two different tree plots using taxa and common name to color the tips of the tree.
+
+```{r}
+small_tree <- read.tree(file = "http://ape-package.ird.fr/APER/APER2/primfive.tre")
+branching.times(small_tree)
+ggtree(small_tree) + 
+  xlim(0, 1.5) +
+  geom_tiplab(fontface = "italic")
+
+label <- small_tree$tip.label[1:2]
+taxa <- c("Hominini", "Hominidae")
+common_name <- c("Human", "Orangutan")
+
+data.frame(label, taxa, common_name)
+
+
+```
+## Mapping data to the tree stucture
+
+Load data from package TDbook using the function `data()`:
+```{r}
+install.packages("TDbook")
+library(TDbook)
+data("tree_boots")
+data("df_tip_data")
+data("df_inode_data")
+tree_boots
+# column "Newick_label" change to "label" in df_tip_data and in df_inode_data
+```
+
+Using mutate
+```{r}
+renamed_tip_data <- df_tip_data %>% 
+  mutate(label = Newick_label)
+colnames(renamed_tip_data)
+renamed_inode_data <- df_inode_data %>% 
+  mutate(label = newick_label)
+colnames(renamed_inode_data)
+renamed_inode_data$label
+```
+Using colnames function
+
+```{r}
+colnames(df_tip_data)[1] <- "label"
+colnames(df_tip_data)
+df_inode_data
+colnames(df_inode_data)[1] <- "label"
+colnames(df_inode_data)
+
+```
+
+Join `tree_boots` to `df_tip_data`:
+
+```{r}
+names(tree_boots)
+colnames(df_tip_data)
+intersect(names(tree_boots), colnames(df_tip_data))
+tree_joined <- left_join(tree_boots, df_tip_data, by = "label")
+tree_joined
+```
+
+Plot some data to the tips of `tree_boots`
+
+```{r}
+colnames(df_tip_data)
+df_tip_data$rank
+
+ggtree(tree_joined) +
+  geom_tippoint(mapping = aes(shape = trophic_habit,
+                              color = trophic_habit,
+                              size = mass_in_kg)) +
+  geom_tiplab(fontface = "italic") +
+  xlim(0, 4)
+
+df_tip_data
+
+```
+
+Exercise: Mapping weight data from `surveys` CSV table to the portal tree
+1. Get the average weight and hindfoot length per species.
+2. Create a new data frame that contains the taxonomy data plus the averaged data per species that you got on last question.
+3. Create two plots with data on the tips, one with the average weight and the other with average hindfoot length. Make sure to also add tip labels, formatted in italics.
+
+```{r}
+library(dplyr)
+colnames(surveys)
+surveys %>% 
+  filter(!is.na(weight)) %>% 
+  group_by(species_id) %>% 
+  summarise(mean_weight = mean(weight)) -> species_weight
+nrow(species_weight)
+spp_weight <- inner_join(species, species_weight)
+spp_weight
+
+colnames(taxonomy)
+taxonomy_weight <- full_join(taxonomy, spp_weight)
+taxonomy_weight
+
+tree_join <- left_join(portal_tree, taxonomy_weight, by = "label")
+
+tree_join
+
+ggtree(tree_join) + 
+  geom_tiplab(fontface = "italic", size = 2) +
+  xlim(0, 20) +
+  geom_tippoint(mapping = aes(shape = "circle",
+                              size = mean_weight,
+                              color = taxa))
+```
+
+
+
+
+
+
