--- a/documents/functions-after.Rmd
+++ b/documents/functions-after.Rmd
@@ -2,7 +2,7 @@
 title: "Functions homework"
 author: "Luna L Sanchez Reyes"
 date: "2022-11-11"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
